parse http request package to a structure named request_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(tinyserver C)
 
 set(CMAKE_C_STANDARD 90)
 
-add_executable(tinyserver tinyserver.c src/c/tcp.c)
+add_executable(tinyserver
+        tinyserver.c src/c/tcp.c src/c/http.c)
+
+
+add_executable(t test.c)
